hphp/hack/test/typecheck/construct_consist3.php.exp
File "construct_consist3.php", line 11, characters 7-8:
This object is of type C3 (Typing[4040])
File "construct_consist3.php", line 11, characters 18-19:
It is incompatible with this object of type C2
because some declarations are incompatible.
Read the following to see why:
File "construct_consist3.php", line 13, characters 19-29:
Too few arguments
File "construct_consist3.php", line 8, characters 19-29:
Because of this definition
